css/styles.css
@import url('https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');

* {
	font-family: 'Mulish';
	box-sizing: border-box;
	/* max-width: 100vw; */
	/* overflow-x: hidden; */
}

.tranparent {
	background-color: transparent !important;
}

.nav-container-cus {
	position: fixed;
	top: 0;
	width: 100%;
	z-index: 10000;
	max-width: 100vw;
}

.color {
	background-color: #fff;
}

.nav-link {
	color: #053d76 !important;
	font-weight: 600 !important;
}

.nav-link:hover {
	text-decoration: none !important;
}

.nav-dropdown-elem-chevron {
	display: none;
}

.nav-dropdown-elem {
	display: flex;
	align-items: center;
	justify-content: space-between;
	font-size: 12px;
	font-family: 'Mulish';
	font-weight: 600;
	font-size: 12px;
	line-height: 120%;
	letter-spacing: 0.1px;
	color: #053d76;
}

.tempp {
	display: flex;
	align-items: center;
}

.nav-dropdown-elem:hover .nav-dropdown-elem-chevron {
	display: inline-block;
}

.nav-dropdown-elem-img {
	width: 24px;
	height: 24px;
	margin-right: 10px;
}

.dropdown-menu {
	min-width: 200px !important;
}

.dropdown-item {
	padding: 12px !important;
}

.nav-contianer {
	width: 100% !important;
	max-width: 1440px !important;
}

@media screen and (max-width: 1200px) {
	.nav-link {
		font-size: 13px !important;
	}
}

body {
	background: linear-gradient(
		178.91deg,
		rgba(108, 220, 247, 0.3) 24.42%,
		rgba(232, 247, 255, 0) 104.59%
	);
	background-size: 100vw 650px;
	background-repeat: no-repeat;
	background-attachment: scroll;
}

.hero-section {
	min-height: 650px;
	display: flex;
	align-items: flex-end;
}

@media screen and (max-width: 960px) {
	.spec-page-herosec {
		margin-top: 75px;
		min-height: 200px !important;
	}
	.hero-section {
		margin-top: 75px;
	}
}

@media (min-width: 992px) {
	.navbar-expand-lg .navbar-collapse {
		display: flex !important;
		flex-basis: auto;
		justify-content: flex-end;
	}
}
@media (min-width: 992px) {
	.navbar-expand-lg .navbar-nav {
		flex-direction: row;
		justify-content: space-between;
		width: 90%;
	}
	.dropdown:hover .dropdown-menu {
    display: block;
    margin-top: 0;
	}
}

/* ! hero section css */

.hero-section-flex {
	display: flex;
	flex-direction: row-reverse;
}

.hero-heading,
.hero-img {
	flex: 1;
}

.hero-img {
	display: flex;
	justify-content: flex-end;
}

.hero-heading {
	display: flex;
	flex-direction: column;
	justify-content: center;
}

.hero-heading-title {
	max-width: 511px;
	font-family: 'Mulish';
	font-weight: 800;
	font-size: 48px;
	line-height: 117%;
	letter-spacing: 0.2px;
	color: #053d76;
	overflow: hidden;
}

.sec-page-title {
	max-width: 730px;
	margin: auto !important;
	font-family: 'Mulish';
	font-weight: 800;
	font-size: 48px;
	line-height: 117%;
	letter-spacing: 0.2px;
	color: #053d76;
	text-align: center;
}

.left-title {
	max-width: 511px;
	font-family: 'Mulish';
	font-weight: 800;
	font-size: 32px;
	line-height: 117%;
	letter-spacing: 0.2px;
	color: #053d76;
}

.hero-heading-desc {
	max-width: 445px;
	margin: 18px 0;
	font-family: 'Mulish';
	font-size: 16px;
	line-height: 137%;
	letter-spacing: 0.3px;
	color: #7783a8;
}

.sec-page-desc {
	max-width: 540px;
	margin: 16px auto !important;
	margin: 18px 0;
	font-family: 'Mulish';
	font-size: 16px;
	line-height: 137%;
	letter-spacing: 0.3px;
	color: #7783a8;
	text-align: center;
}

.hero-c2a-btn {
	border: none;
	background: #053d76;
	border: 2px solid rgba(5, 61, 118, 0.25);
	box-sizing: border-box;
	padding: 12px;
	border-radius: 6px;
	width: 153px;
	height: 54px;
	font-family: 'Mulish';
	font-weight: bold;
	font-size: 16px;
	line-height: 137%;
	display: flex;
	align-items: center;
	text-align: center;
	letter-spacing: 1px;
	color: #ffffff;
	display: flex;
	align-items: end;
}

.arrow {
	width: 16px;
	height: 16px;
}

.arrow svg {
	width: 16px;
	height: 16px;
}

@media screen and (max-width: 960px) {
	.hero-section {
		align-items: center;
	}
	.hero-section-flex {
		display: block;
		margin-top: 10px;
	}
	.hero-heading-title,
	.sec-page-title,
	.left-title {
		font-size: 26px;
	}
	.hero-img {
		margin-bottom: 20px;
		overflow: hidden;
	}
}

.teams-cont {
	margin: 95px 0;
}

.teams-title {
	max-width: 538px;
	font-family: 'Mulish';
	font-weight: 800;
	font-size: 32px;
	line-height: 125%;
	letter-spacing: 0.1px;
	color: #053d76;
	margin: 24px 0;
}

.teams-desc {
	max-width: 445px;
	font-family: 'Mulish';
	font-size: 16px;
	line-height: 137%;
	letter-spacing: 0.3px;
	color: #7783a8;
}

.circle-wrap {
	width: 219px;
	height: 219px;
	background: #fff;
	border-radius: 50%;
	margin: 10px auto;
	overflow: hidden !important;
}
.circle-wrap .fill {
	width: 219px;
	height: 219px;
	position: absolute;
	border-radius: 50%;
	clip: rect(0px, 110px, 219px, 0px);
	background-color: #e8eff2;
	overflow: hidden !important;
}
.circle-wrap .mask {
	width: 219px;
	height: 219px;
	position: absolute;
	border-radius: 50%;
	clip: rect(0px, 219px, 219px, 109px);
	overflow: hidden !important;
}

.full.twentytwo,
.twentytwo .fill {
	transform: rotate(170deg);
	overflow: hidden !important;
}

.full.sixteen,
.sixteen .fill {
	transform: rotate(170deg);
	overflow: hidden !important;
}

.full.twentyfour,
.twentyfour .fill {
	transform: rotate(170deg);
	overflow: hidden !important;
}

.full.ninety,
.ninety .fill {
	transform: rotate(170deg);
	overflow: hidden !important;
}

.ninety.full.animate,
.ninety.animate .ninety {
	animation: ninety linear 3s forwards;
}

.twentyfour.full.animate,
.twentyfour.animate .twentyfour {
	animation: twentyfout linear 3s forwards;
}

.sixteen.full.animate,
.sixteen.animate .sixteen {
	animation: sixteen linear 3s forwards;
}

.twentytwo.full.animate,
.twentytwo.animate .twentytwo {
	animation: twentytwo linear 3s forwards;
}

@keyframes twentytwo {
	0% {
		transform: rotate(0deg);
	}
	100% {
		transform: rotate(40deg);
	}
}

@keyframes sixteen {
	0% {
		transform: rotate(0deg);
	}
	100% {
		transform: rotate(29deg);
	}
}
/* ... */

